[package]
name = "rust_db_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"

regex = "1"
lazy_static = "*"

indoc = "1.0"

mysql = "*"

petgraph = "0.6.*"

serial_test = "0.10.0"

log4rs = "1.2.0"
log = "*"